fix aligning of gallery and add id to section

--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -9,6 +9,8 @@
   grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr;
   grid-template-rows: 15px 10px 3px 13px 2px 12px 2px 8px 2px 1px 2px 10px 1px 1px 1px 14px 10px 3px 12px;
   grid-column-gap: 2px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .gallery__item {
